tests/paczka1/small_fuzzy/55924928.err
Error in line 4: 7SdELad A228 90,2
Error in line 2: 7SdEsLad A228 75,8
Error in line 1: 1v534dDIDqw A228 48,8
Error in line 12: 9N3 A228 79,5
Error in line 13: 9N3 S618 54,1
